Add the first two functionalities of the first endpoint

--- a/Tutorial9/appsettings.json
+++ b/Tutorial9/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Jakis connection string"
+    "Default": "Data Source=localhost,1433;Initial Catalog=master;User ID=SA;Password=yourStrong(!)Password;TrustServerCertificate=True"
   }
 }
